2/29/12 created missing changes.txt file