@@ -1,1 +1,2 @@
+2/29/12 #2620, delete dead code from PAPhotonNode, make a note about what needs to be done here
 2/29/12 created missing changes.txt file
